新增token判断是否弹出login

--- a/monitor-chart/monitor.html
+++ b/monitor-chart/monitor.html
@@ -10,7 +10,7 @@
     </head>
     <body ontouchstart="" class="bg_gray">
         <section id="container" class="viewport">
-            <header class="jr_top"><em onclick="location='/monitor/monitor/index.html'"></em>设备信息<p class="jc_ic"></p></header>
+            <header class="jr_top"><em onclick="shouYe()"></em>设备信息<p class="jc_ic"></p></header>
             <div class="jct_item clearfix">
                 <div class="jr_info">
                     <img src="../images/img.jpg" alt="" class="jr_img"/>
