--- a/monitor/index.html
+++ b/monitor/index.html
@@ -91,8 +91,10 @@ window.onload = function(){
     init();
   }
   //判断是否需要登录
-    showLogin();
-  draw();
+    if(!checkLogin()) {
+        showLogin();
+    }
+    draw();
   re_loop = setInterval(draw,2000);
 
   $("#connect").on("click", function (){
