新增token判断是否弹出login

--- a/monitor/index.html
+++ b/monitor/index.html
@@ -94,7 +94,7 @@ window.onload = function(){
     if(!checkLogin()) {
         showLogin();
     }
-    changeButtonStatus();
+    isBinding();
     draw();
   re_loop = setInterval(draw,2000);
 
